# OTIS

./: CMakeLists.txt  TODO.txt  alert_manager.cpp  alert_manager.h  alerts_page.cpp  alerts_page.h  custom_header_view.cpp  custom_header_view.h  customdatetimerangedialog.cpp  customdatetimerangedialog.h  customdatetimerangedialog.ui  database_manager.cpp  database_manager.h  enums.h  filter_header.cpp  filter_header.h  log_format.json  log_parser.cpp  log_parser.h  logs.h  logs_page.cpp  logs_page.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  new_rule_dialog.cpp  new_rule_dialog.h  new_rule_dialog.ui  overview.cpp  overview.h  rule_manager.cpp  rule_manager.h  rules.h  rules_page.cpp  rules_page.h  settings_manager.cpp  settings_manager.h  syslog_receiver.cpp  syslog_receiver.h  (+9 more)
